# clion-iar-stm32f3-stub

./: .gdbinit  .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  Readme.md  clion-iar-stm32f3-stub.ioc  clion-iar-stm32f3-stub.txt  toolchain-iar-9-arm.cmake
Core/Inc/: main.h  stm32f3xx_hal_conf.h
Core/Src/: cpp_code.cpp  cppmain.cpp  main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
EWARM/: Project.eww  clion-iar-stm32f3-stub.ewd  clion-iar-stm32f3-stub.ewp  stm32f303xc_flash.icf
